/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package Encriptar;

/**
 *
 * @author Gian Marrufo
 */
public interface IEncriptador {
    String Encriptar (String datoSinEncriptar);
    String Desencriptar (String datoEncriptado);
}
